# code-evolve-kg

./: .gitignore  LICENSE  README.md  SECURITY.md  SKILL.md
science-codeevolve/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TODO.md  UPSTREAM.yml  pyproject.toml
science-codeevolve/.github/workflows/: ci.yml
science-codeevolve/configs/: README.md
science-codeevolve/configs/templates/: config_gemini.yaml  config_mock.yaml  config_qwen.yaml
science-codeevolve/docs/: kim_kdm6_microphysics_problem_setup.md  literature_positioning.md  okf_knowledge_usage_assessment.md  wrf_single_physics_problem_setup.md
science-codeevolve/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
science-codeevolve/graphify-out/cache/: stat-index.json
science-codeevolve/problems/fortran_stencil/: config.yaml
science-codeevolve/problems/kim_kdm6_microphysics/: README.md  kim_kdm6_target.example.yaml
science-codeevolve/problems/wrf_single_physics/: README.md  wrf_target.example.yaml
science-codeevolve/scripts/: make_kg_ablation_plan.py  run.sh  run_mock.sh  verify_kim_kdm6_baseline.py
science-codeevolve/src/codeevolve/: cli.py  (+6 more)
science-codeevolve/tests/: test_apply_diff.py  test_ckpt.py  test_cli_setup.py  test_database.py  test_evaluator.py  test_evolution.py  test_graph.py  test_graphify_export.py  test_kg_ablation_plan.py  test_kg_separation.py  test_kim_kdm6_baseline.py  test_knowledge_gate.py  test_lm.py  test_lock.py  test_logging.py  test_prompt.py  test_scheduler.py  test_sync.py
science-codeevolve/wiki/: hot.md  index.md  log.md  overview.md
(+106 files in other folders)
