[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeevolve"
dynamic = ["version"]
description = "Source code for CodeEvolve."
readme = "README.md"
requires-python = ">=3.13.5"
license = "Apache-2.0"
authors = [
    {name = "Inter Science"}
]
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.1.0",
    "openai>=1.91.0",
    "psutil>=6.1.0",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.18.0",
    "pip-audit>=2.9.0",
]

benchmarks = [
    "sympy>=1.13.3",
    "jax>=0.7.2",
    "torch>=2.5.1",
    "numba>=0.61.2",
    "scikit-learn>=1.7.1",
    "deap>=1.4.3",
    "platypus-opt",
    "scikit-opt>=0.6.6",
    "nevergrad>=1.0.12",
    "optuna>=4.4.0",
    "shapely>=2.1.1",
    "rtree>=1.4.0",
    "python-constraint>=1.4.0",
    "ortools>=9.14.6206",
    "cvxpy>=1.7.1",
    "pymunk>=7.1.0",
    "joblib>=1.5.1",
    "cython>=3.1.2",
    "numexpr>=2.10.1"
]

[project.scripts]
codeevolve = "codeevolve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "codeevolve.__version__"}

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
